tests/paczka1/fuzzy1/14490045.err
Error in line 2: RRotECZ A164 77,8
Error in line 10: ikUC A912 61,5
Error in line 22: MTyy1AU A481 21,5
Error in line 16: ikUC A164 80,7
Error in line 25: ikUC S553 27,4
Error in line 26: 8Ipi S553 54,1
Error in line 33: 8Ipi A481 8,2
Error in line 37: CICCiZ S553 64,1
